style.css
body {
  padding: 0px;
  margin: 0px;
}

.left-right {
  display: flex;
  justify-content: center;
  width: 100vw;
}

.right {
  display: flex;
  width: 55vw;
  flex-direction: column;
  justify-content: center;
  align-items: start;
  flex-grow: 2;
  background-color: rgb(240, 240, 240);
}

.left {
  flex-grow: 1;
  position: relative;
  width: 45vw;
  min-width: 345px;
  height: 100vh;
  background: url(rain.avif);
  background-size: cover;
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
}

.bar {
  background-color: rgba(0, 0, 0, 0.5);
  width: 100%;
  height: 200px;
  bottom: 300px;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

.form-box {
  background-color: white;
  width: 100%;
  height: 400px;
  opacity: 1;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  flex-direction: column;
  padding: 1.2rem 2vw 3rem 2vw;
  box-shadow: 5px 5px 15px black;
}

h1 {
  font-size: 50px;
}

.first {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  flex-direction: column;
  font-family: sans-serif;
  padding: 0 50px;
  position: relative;
  bottom: 50px;
}

form {
  display: flex;
  width: 50vw;
  height: 200px;
  flex-flow: row wrap;
  gap: 1.5rem;
  font-size: 1.5rem;
}

label {
  position: relative;
  width: 15rem;
  margin-bottom: 15px;
}

button[type="submit"] {
  padding: 0.8rem 1.3rem;
  font-size: 1.3rem;
  background-color: #596d48;
  border: none;
  border-radius: 10px;
  color: white;
  letter-spacing: -1px;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.253);
}

input {
  border: 2px solid #000;
  margin-bottom: 15px;
  padding: 5px;
  border-radius: 5px;
}

input:focus {
  border: 2px dashed blue;
  margin-bottom: 15px;
  padding: 5px;
  border-radius: 5px;
}

input:invalid {
  border-color: red;
}

/* input:valid {
  border-color: green;
} */

.error {
  font-family: customFontBold;
  font-size: 0.7rem;
  color: rgb(255, 69, 100);
  position: absolute;
  top: 30px;
}

